# chenglu

./: index.html  package-lock.json  package.json
.chat/: 0616.md  0617.md  0624.md
.github/workflows/: windows-build.yml
files/: 收钱.xlsx
scripts/: generate_icon.py
specs/: 0001_design.md  0002_demand.md  0003_design.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_contracts.sql  003_contract_supplements.sql  004_attachments.sql  005_backups.sql  006_attachment_categories.sql  007_contract_financial_details.sql  008_amount_units_to_yuan.sql  009_payment_amount_limits.sql
src-tauri/src/: lib.rs  main.rs
src/app/: App.tsx
src/components/: AttachmentList.tsx  MoneyText.tsx
src/layouts/: AdminLayout.tsx
src/pages/: LoginPage.tsx
src/pages/contracts/: ContractDetailDrawer.tsx  ContractFormDrawer.tsx  ContractListPage.tsx  SupplementDetailDrawer.tsx  SupplementFormDrawer.tsx  SupplementTable.tsx
src/pages/inspectionReports/: InspectionReportsPage.tsx
src/services/: attachmentApi.ts  authApi.ts  contractApi.ts  mockStore.ts  supplementApi.ts  systemApi.ts  tauri.ts
src/types/: attachment.ts  contract.ts  supplement.ts  system.ts
src/utils/: date.ts  errors.ts  money.ts
