[package]
name = "chenglu-admin"
version = "0.1.0"
description = "合同管理"
authors = ["chenglu"]
edition = "2021"

[lib]
name = "chenglu_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
hex = "0.4"
open = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"
